[gd_scene load_steps=3 format=3 uid="uid://bhqne5ilsv34k"]

[ext_resource type="PackedScene" uid="uid://xkum8std5o1k" path="res://Entity/Entity.tscn" id="1_3hrt3"]
[ext_resource type="Script" path="res://Entity/Player/Player.gd" id="2_tydpe"]

[node name="Player" groups=["Player"] instance=ExtResource("1_3hrt3")]
script = ExtResource("2_tydpe")

[node name="Sprite2D" parent="." index="1"]
modulate = Color(0, 1, 0, 1)

[node name="ColorRect" type="ColorRect" parent="." index="2"]
visible = false
offset_left = -8.0
offset_top = 64.0
offset_right = 8.0
offset_bottom = 104.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="." index="3"]
offset_left = -64.0
offset_top = -112.0
offset_right = 64.0
offset_bottom = -81.0
text = "Atacar
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_area_2d_2_area_exited"]
